# sound2species

./: .gitignore  Farmyard_SED_Colab.ipynb  README.md  pyproject.toml  requirements.txt
notebooks/: farmyard_sed.ipynb
src/: __init__.py  data_generator.py  evaluate.py  model.py  pipeline.py  train.py  tune.py  yamnet.py
