[project]
name = "sound2species"
version = "0.1.0"
description = "Sound event detection for farmyard audio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "tensorflow>=2.13.0",
    "tensorflow-hub>=0.13.0",
    "matplotlib>=3.7.0",
    "sed-eval>=0.2.1",
    "dcase-util>=0.2.20",
    # tensorflow-hub still imports pkg_resources, dropped from setuptools 81+
    "setuptools<81",
]

[tool.uv]
package = false
